# SealRegistry

./: .gitignore  README.md  cadlacre.spec  main.py  makefile  pyproject.toml
.github/workflows/: main.yml
api_registry/: app.py  constants.py
app/: constants.py  decorators.py  exceptions.py  gui.py  schemas.py  utils.py
app/services/: automation_service.py  cache_service.py  gui_service.py
automation_registry/: app.py  pyproject.toml
client/: main.py  pyproject.toml
client/app/: cli.py  constants.py  core.py  exceptions.py  gui.py  utils.py
client/app/interfaces/: interface_interface.py  progressbar_interface.py  seal_api_interface.py
client/app/repository/: automation_api.py  http_api.py
client/app/seal_api/: automation_api.py  http_api.py  interface.py
client/app/services/: cache_service.py  cli_service.py  gui_service.py  progressbar_interface.py  progressbar_service.py
client/app/services/seal_api/: automation_api.py  http_api.py
mocks/api/: app.py  data.py  pyproject.toml
